--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NT1YB24DXZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NT1YB24DXZ');
+</script>
+
+
+
 </head>
 <body>
   <header>
@@ -119,7 +131,7 @@
         <ul>
           <li><i class=""></i> اعداد طالب عبدالحكيم ناجي محمد قاسم الصوفي </li>
           <li><i class="fas fa-envelope"></i> info@example.com</li>
-          <li><i class="fas fa-phone"></i> +967 781 069 202</li>
+          <li><i class="fas fa-phone"></i>781069202 967+</li>
           <li><i class="fas fa-map-marker-alt"></i> صنعاء، اليمن</li>
         </ul>
       </div>
