--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <li><a href="internet.html"><i class="fas fa-globe"></i> أساسيات الإنترنت</a></li>
           <li><a href="contact.html"><i class="fas fa-envelope"></i> تواصل معنا</a></li>
         </ul>
-        <span>اعداد عبد الحكيم الصوفي </span>
+     <!--  <span>اعداد عبد الحكيم الصوفي </span>-->
       </nav>
     </div>
   </header>
