--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>تعلم الحاسوب من الصفر إلى الاحتراف</title>
+   <meta name="description" content="ابدأ رحلتك في تعلم الحاسوب من الصفر حتى الاحتراف مع شروحات مبسطة ودروس شاملة حول أنظمة التشغيل والإنترنت والأجهزة.">
+  <meta name="keywords" content="تعلم الحاسوب, تعليم الكمبيوتر, أنظمة التشغيل, الإنترنت, لوحة المفاتيح, الفأرة">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
