--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
           <li><a href="keyboard-mouse.html"><i class="fas fa-keyboard"></i> لوحة المفاتيح والفأرة</a></li>
           <li><a href="internet.html"><i class="fas fa-globe"></i> أساسيات الإنترنت</a></li>
           <li><a href="contact.html"><i class="fas fa-envelope"></i> تواصل معنا</a></li>
+       
+        <li><a href="privacy.html"><i class="fas fa-shield-alt"></i> سياسة الخصوصية</a></li>
+<li><a href="cookies.html" class="active"><i class="fas fa-cookie-bite"></i> سياسة ملفات تعريف الارتباط</a></li>
+ <li><a href="terms.html" class="active"><i class="fas fa-file-contract"></i> الشروط والأحكام</a></li>
         </ul>
      <!--  <span>اعداد عبد الحكيم الصوفي </span>-->
       </nav>
