--- a/internet.html
+++ b/internet.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <title>أساسيات الإنترنت - تعلم الحاسوب</title>
+<title>تعلم الحاسوب - دروس وشروحات لتعلم الكمبيوتر من الصفر حتى الاحتراف</title>
+<meta name="description" content="موقع شامل لتعلم أساسيات ومهارات الحاسوب والإنترنت وأنظمة التشغيل للمبتدئين خطوة بخطوة بطريقة سهلة ومبسطة.">
+
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
