--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>تواصل معنا - تعلم الحاسوب</title>
+  <title>تواصل معنا - تعلم الحاسوب</title>
+<meta name="description" content="تواصل معنا للاستفسارات أو الاقتراحات عبر نموذج الاتصال أو البريد الإلكتروني، فريقنا جاهز للرد عليك.">
   <link rel="stylesheet" href="style.css">
+  
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
