--- a/os.html
+++ b/os.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>أنظمة التشغيل - تعلم الحاسوب</title>
+ <title>أنظمة التشغيل - تعلم الحاسوب</title>
+<meta name="description" content="تعرف على أنواع أنظمة التشغيل مثل ويندوز ولينكس وماك وكيفية استخدامها وإدارة الملفات والبرامج بسهولة.">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
