--- a/internet.html
+++ b/internet.html
@@ -6,8 +6,10 @@
   
   <title>أساسيات الإنترنت - تعلم الحاسوب</title>
 <title>تعلم الحاسوب - دروس وشروحات لتعلم الكمبيوتر من الصفر حتى الاحتراف</title>
-<meta name="description" content="موقع شامل لتعلم أساسيات ومهارات الحاسوب والإنترنت وأنظمة التشغيل للمبتدئين خطوة بخطوة بطريقة سهلة ومبسطة.">
 
+  <meta name="description" content="موقع شامل لتعلم أساسيات ومهارات الحاسوب والإنترنت وأنظمة التشغيل للمبتدئين خطوة بخطوة بطريقة سهلة ومبسطة.">
+<title>أساسيات الإنترنت - تعلم الحاسوب</title>
+<meta name="description" content="دليل شامل لتعلم أساسيات الإنترنت، استخدام المتصفح، البريد الإلكتروني، ومحركات البحث بأمان وفعالية.">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
