--- a/keyboard-mouse.html
+++ b/keyboard-mouse.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>لوحة المفاتيح والفأرة - تعلم الحاسوب</title>
+<title>لوحة المفاتيح والفأرة - تعلم الحاسوب</title>
+<meta name="description" content="تعلم أساسيات استخدام لوحة المفاتيح والفأرة، أهم الاختصارات والنصائح لتسريع العمل على الكمبيوتر.">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
