--- a/privacy.html
+++ b/privacy.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>سياسة الخصوصية - تعلم الحاسوب</title>
+ <title>سياسة الخصوصية - تعلم الحاسوب</title>
+<meta name="description" content="تعرف على سياسة الخصوصية لموقع تعلم الحاسوب وكيفية حماية معلوماتك وبياناتك الشخصية.">
+  
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
