--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>تعلم الحاسوب من الصفر إلى الاحتراف</title>
    <meta name="description" content="ابدأ رحلتك في تعلم الحاسوب من الصفر حتى الاحتراف مع شروحات مبسطة ودروس شاملة حول أنظمة التشغيل والإنترنت والأجهزة.">
   <meta name="keywords" content="تعلم الحاسوب, تعليم الكمبيوتر, أنظمة التشغيل, الإنترنت, لوحة المفاتيح, الفأرة">
+ <title>تعلم الحاسوب - دروس وشروحات لتعلم الكمبيوتر من الصفر حتى الاحتراف</title>
+<meta name="description" content="موقع شامل لتعلم أساسيات ومهارات الحاسوب والإنترنت وأنظمة التشغيل للمبتدئين خطوة بخطوة بطريقة سهلة ومبسطة.">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
