--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
 
 
-  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>تعلم الحاسوب من الصفر إلى الاحتراف</title>
@@ -28,8 +27,11 @@
 
   gtag('config', 'G-NT1YB24DXZ');
 </script>
-
-
+<!-- تحويل الموقع الى تطبيق وعمل ايقونة -->
+<link rel="manifest" href="manifest.json">
+<link rel="icon" href="icon-192.png" type="image/png">
+<meta name="theme-color" content="#ffffff">
+  
 
 </head>
 <body>
