--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="manifest" href="manifest.json">
 <link rel="icon" href="icon-192.png" type="image/png">
 
-
+<meta name="google-site-verification" content="2fMvRp-dsrAtoPuHvYauJ4ytMCKFk_5MpJOS8gRuTJU" />
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
